--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,20 +1,17 @@
 name: Go
 on: [push]
 jobs:
-
   build:
-    name: Build
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        go: [ '1.16', '1.15' ]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    name: Open Web Launch ${{ matrix.go }}-${{ matrix.os }} 
     steps:
-
-    - name: Set up Go 1.13
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.13
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
-
-    - name: Build
-      run: cd cmd/openweblaunch && go build -v .
+      - uses: actions/checkout@v2
+      - name: Setup go
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go }}
+      - run: cd cmd/openweblaunch && go build -v .
